# test2

./: README.md  package.json  tsconfig.json
rug_surfer_bot/: Cargo.toml  config.json
rug_surfer_bot/src/: config.rs  main.rs
rug_surfer_bot/src/detection/: engine.rs  mod.rs  signals.rs  state.rs
rug_surfer_bot/src/solana/: cluster.rs  holders.rs  logs.rs  lp.rs  mod.rs  websocket.rs
rug_surfer_bot/src/telegram/: bot.rs
rug_surfer_bot/src/utils/: logging.rs  mod.rs  time.rs  types.rs
src/: index.ts
src/config/: config.example.json  configLoader.ts
src/core/: aiEngine.ts  dataFeed.ts  featureEngine.ts  logManager.ts  positionManager.ts  riskEngine.ts  tradeEngine.ts
src/integrations/: axiomWatcher.ts  jupiterClient.ts  llmClient.ts  solanaClient.ts  telegramBot.ts
src/utils/: logger.ts  mathUtils.ts  types.ts
