[package]
name = "rug_surfer_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros", "rustls", "ctrlc"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1.0"
